examples/c/error-codes/violates-constraint/fatal/CV-TSE3-bad-static.output
CV-TSE3-bad-static.c:7:9: error: initializer element is not a compile-time constant
int x = f();
        ^~~
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
