examples/c/error-codes/violates-constraint/fatal/CV-TSE3-bad-static.c
// Copyright (c) 2015-2018 Runtime Verification, Inc. (RV-Match team). All Rights Reserved.

static int f(void) {
	return 0;
}

int x = f();

int main(void){
	return x;
}

